ARROW-11518: [C++][Parquet] Fix code formatting